[Java] use Commons Lang3 fix a String NPE